--- a/api/v1/public/.htaccess
+++ b/api/v1/public/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
     Options -Multiviews
     RewriteEngine On
-    RewriteBase  /SENA/5_Trim_PHP_SENA/Proyecto_Transporte_Publico/api/v1
+    RewriteBase  /api/v1
     RewriteCond  %{REQUEST_FILENAME}  !-d
     RewriteCond  %{REQUEST_FILENAME}  !-f
     RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
